[package]
name = "fiff"
version = "0.1.0"
edition = "2021"
authors = ["Simon Draeger <sdraeger@salk.edu>"]
description = "Pure Rust implementation of the FIFF (Functional Imaging File Format) parser for MEG/EEG data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sdraeger/fiff-rs"
keywords = ["meg", "eeg", "neuroscience", "neuroimaging", "fiff"]
categories = ["science", "parser-implementations"]
readme = "README.md"

[dependencies]
byteorder = "1.5"

[dev-dependencies]
# Add test dependencies if needed

[lib]
name = "fiff"
path = "src/lib.rs"
